add put endpoint for topics
